crates/css_lexer/tests/snapshots/basic_snapshots__basic_media.snap
---
source: crates/css_lexer/tests/basic_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "AtKeyword",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
