crates/css_lexer/tests/snapshots/basic_snapshots__basic_vars.snap
---
source: crates/css_lexer/tests/basic_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 16,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 14,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
    unit: r#%,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 14,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
    unit: r#%,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
